# crypto-aggregator

./: README.md
crypto-aggregator-starter/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
crypto-aggregator-starter/.github/workflows/: ci.yml
crypto-aggregator-starter/app/adapters/: bybit.py
crypto-aggregator-starter/app/api/: main.py  routes.py
crypto-aggregator-starter/app/core/: config.py
crypto-aggregator-starter/app/models/: schemas.py
crypto-aggregator-starter/app/services/: cache.py
crypto-aggregator-starter/crypto_aggregator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crypto-aggregator-starter/docs/: ARCHITECTURE.md  DEPLOY_APP_RUNNER_ECR.md  RESUME_TEMPLATE.md
crypto-aggregator-starter/scripts/: run_bybit.py
crypto-aggregator-starter/tests/: test_cache.py  test_health.py  test_schemas.py
