[project]
name = "crypto-aggregator"
version = "0.1.0"
description = "FastAPI-based crypto order book aggregator (starter)"
authors = [{name = "Artyom", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "websockets>=13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.7",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "anyio>=4.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7",
  "mypy>=1.11.1",
  "coverage>=7.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B"]
fix = true
exclude = ["infra/", "docs/"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = false
ignore_missing_imports = true

